--- a/projectDjango/btest/templates/btest/index.html
+++ b/projectDjango/btest/templates/btest/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-
-	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-	{% load bootstrap5 %}
-	{% bootstrap_javascript %}
-	{% bootstrap_css %}
-	<title>Главная - Доска объявлений</title>
+<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+{% load bootstrap5 %}
+{% bootstrap_javascript %}
+{% bootstrap_css %}
+<title>Главная - Доска объявлений</title>
 </head>
-
 <body>
-	<h1>Объявления</h1>
-	{% for bb in bbs %}
-	<div>
-		<h2>{{ bb.title }}</h2>
-		<p>{{ bb.content }}</p>
-		<p>{{ bb.published|date:"d.m.Y. H:i:s"}}</p>
-	</div>
-	{% endfor %}
+<h1>Объявления</h1>
+{% for bb in bbs %}
+<div>
+<h2>{{ bb.title }}</h2>
+<p>{{ bb.content }}</p>
+<p>{{ bb.published|date:"d.m.Y. H:i:s"}}</p>
+{% if bb.rubric %}
+<p>{{ bb.rubric }}</p>
+{% endif %}
+</div>
+{% endfor %}
 </body>
 </html>
